# oghma

./: Cargo.toml  README.md
.github/workflows/: pre-production.yml
src/: config.rs  data_grabber.rs  image_generator.rs  main.rs  telegram_writer.rs
src/data_grabber/: adliswil.rs  we_recycle.rs
