[package]
name = "oghma"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
time = { version = "0.3.36", features = ["macros"] }
image = "0.24.4"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
rusttype = "0.9.3"
pdf-extract = "0.7.10"
regex = "1.11.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
